static/css/style.css
/* ... */
/*-- //about --*/

/*-- services --*/
#services .container{
    width:95%;
    max-width:95%;
    margin:auto;
}

.service-box{
    display:flex;
    align-items:center;
    gap:18px;
}

.service-img{
    width:290px;
    height:240px;
    object-fit:cover;
    border-radius:6px;
    flex-shrink:0;
}

.service-box h4{
    font-size:20px;
    font-weight:600;
    margin-bottom:5px;
}

.service-box p{
    font-size:15px;
    color:#666;
    margin:0;
}
.serviceimage1{
	background: url(../images/banner1.jpg) no-repeat center;
	background-size: cover;
     position: relative;
}
.serviceimage2{
	background: url(../images/banner2.jpg) no-repeat center;
	background-size: cover;
    position: relative;
}
.serviceimage3{
	background: url(../images/banner3.jpg) no-repeat center;
	background-size: cover;
     position: relative;
}
.serviceimage1:before, .serviceimage2:before, .serviceimage3:before {
    border-bottom: 3px solid #eee;
    border-right: 3px solid #eee;
    content: "";
    display: inline-block;
    left: 15px;
    position: absolute;
    right: 15px;
    top: 15px;
    bottom: 15px;
}
.serviceimage1:after, .serviceimage2:after, .serviceimage3:after {
    border-top: 3px solid #eee;
    border-left: 3px solid #eee;
    content: "";
    display: inline-block;
    left: 15px;
    position: absolute;
    right: 15px;
    top: 15px;
    bottom: 15px;
}

.servicetext h4 {
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 600;
    color: #ccc;
}
.servicetext p {
    font-size: 15px;
    color: #777;
    line-height: 28px;
    letter-spacing: .2px;
}
.servicetext a {
    color: #5467ff;
    font-size: 15px;
    letter-spacing: 2px;
    border-bottom: 1px solid #5467ff;
    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
}
.servicetext a:hover {
    border-bottom: 1px solid #eee;
    color: #eee;
}

.servicetext {
    background: #222;
}
/*-- //services --*/

/*-- Testimonials --*/
.testimonials {
    background: url(../images/banner1.jpg)no-repeat center;
    background-attachment: fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    -ms-background-size: cover;
}
.wthree_testimonials_grid_pos img {
    border-radius: 50%;
	-webkit-border-radius: 50%;
	-o-border-radius: 50%;
	-moz-border-radius: 50%;
    margin: 0em auto 0;
    width: 12%;
    border: 2px dashed #fff;
    padding: 5px;
}
.wthree_testimonials_grid {
    position: relative;
    margin: 2em auto 0;
    padding: 2em 5em 2em;
    text-align: center;
	border: 3px solid #ccc;
}
.wthree_testimonials_grid1,.wthree_testimonials_grid{
	width: 90%;
}
.wthree_testimonials_grid p {
    color: #fff;
    line-height: 2.3em;
    margin: 1em 0;
    font-size: 1em;
    letter-spacing: 1px;
     font-weight: 300;
}
.wthree_testimonials_grid1{
	text-align:right;
	margin: 0 auto;
}
.wthree_testimonials_grid h5 {
    color: #5467ff;
    margin: 1em 0 1em;
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 600;
}
.wthree_testimonials_grid1 p{
	color:#212121;
}
/*--flexisel--*/
.flex-slider{	
	background:#222227;
	padding: 70px 0 165px 0;
}
.opportunity{
	background:#28282e;
	margin:0px 20px;
	padding:80px 0;
	position:relative;
}
#flexiselDemo1 {
	display: none;
}
.nbs-flexisel-container {
	position: relative;
	max-width: 100%;
}
.nbs-flexisel-ul {
	position: relative;
	width: 9999px;
	margin: 0px;
	padding: 0px;
	list-style-type: none;
}
.nbs-flexisel-inner {
	overflow: hidden;
	margin: 0px auto;
}
.nbs-flexisel-item {
	float: left;
	margin: 0;
    padding: 0;
	position: relative;
	line-height: 0px;
}
.nbs-flexisel-item > img {
	cursor: pointer;
	position: relative;
}
/*---- Nav ---*/
.nbs-flexisel-nav-left, .nbs-flexisel-nav-right {
	width:36px;
	height:48px;
	position: absolute;
	cursor: pointer;
	z-index: 100;
	top: 72% !important;
}
.nbs-flexisel-nav-left {
	left: 37.5%;
    background:url(../images/left.png) no-repeat no-repeat 3px 6px transparent;
}
.nbs-flexisel-nav-right {
	right: 38%;
	background:url(../images/right.png) no-repeat no-repeat 3px 6px transparent;
}
.test_agile_info {
    background:rgba(0, 0, 0, 0.63);
}
/*-- //flexisel --*/

/*-- contact --*/
.contact-map iframe {
    width: 100%;
    height: 450px;
    border: none;
    outline: none;
    border: 2px dotted #666;
}
.contact-info h4 {
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 600;
    color: #eee;
}
.contact-info p,.contact-info p a {
    font-size: 15px;
    color: #888;
    line-height: 30px;
    letter-spacing: .2px;
}
.contact-info p a:hover{
    color: #eee;
}
.contact-info p span{
    color: #5467ff;
}
.contact-main-grid {
    position: relative;
}
.contact-info {
    position: absolute;
    background: #222;
    padding: 4em 3em;
    border: 1px dashed #222;
    right: 0.2%;
    bottom: 2.1%;
    top: 0.6%;
    width: 40%;
}

/*-- //contact --*/

/*-- team --*/
.barber-grid1{
	position: relative;
}
.barber-grid1:before {
    content: "";
    display: inline-block;
    left: 15px;
    position: absolute;
    right: 15px;
    top: 15px;
    bottom: 15px;
    z-index: 1;
}
.barber-grid1:after {
    content: "";
    display: inline-block;
    left: 15px;
    position: absolute;
    right: 15px;
    top: 15px;
    bottom: 15px;
    z-index: 1;
}
.barber-grids h4 {
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 600;
    color: #222;
}
.barber-grids p {
    font-size: 15px;
    color: #777;
    letter-spacing: 1px;
}

.barbers ul li a {
    font-size: 13px;
    display: block;
    color: #5467ff;
    border: 1px solid #5467ff;
    width: 36px;
    height: 36px;
    line-height: 36px;
    border-radius: 3px;
}
.barbers ul li a:hover {
    background: #5467ff;
    border: 1px solid #5467ff;
    color: #fff;
}
/*-- team --*/

/*-- footer --*/
.newsletter {
    background: #111;
}
/* ... */

